# geneoscopy.pytemplate

./: Makefile  README.md  pytest.ini  setup.cfg
src/geneoscopy/pytemplate/: __init__.py  __main__.py  utils.py
tests/: test_greeting.py
