[metadata]
# version is extracted from SCM tag by setuptools_scm
author = Geneoscopy
author-email = 
description = 
home-page = https://gitlab.com/geneoscopy/genescopy.utils
name = geneoscopy.pytemplate

description-content-type = text/x-rst; charset=UTF-8
description-file = README.md
license = Proprietary
platform = any


[options]
packages = find:
python_requires = >= 3.7
zip_safe = false
package_dir =
    = src
install_requires =

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

tests_require =
    pytest
    pytest-cov


[options.entry_points]
# console_scripts =



[options.extras_require]
dev =
    ipython
    tox


# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.package_data]
* =
    *.yaml




[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
addopts = --cov-config=setup.cfg --cov-report term-missing  --doctest-modules --doctest-glob='*.rst'  --strict
collect_ignore = setup.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
norecursedirs = _data
testpaths = tests
markers =
  network
