[metadata]
# version is extracted from SCM tag by setuptools_scm
author = Geneoscopy
author-email = 
description = 
home-page = https://gitlab.com/geneoscopy/genescopy.pytemplate
name = geneoscopy.pytemplate

description-content-type = text/x-rst; charset=UTF-8
description-file = README.md
license = Proprietary
platform = any


[options]
packages = find:
python_requires = >= 3.7
zip_safe = false
package_dir =
    = src
install_requires =
    coloredlogs

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

tests_require =
    pytest
    pytest-cov

# https://github.com/github/octodns/blob/4b44ab14b1f0a52f1051c67656d6e3dd6f0ba903/setup.cfg#L34
[options.entry_points]
console_scripts =
    geneoscopy-pytemplate = geneoscopy.pytemplate.__main__:main


[options.extras_require]
dev =
    ipython
    tox


# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.package_data]
* =
    *.yaml


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[pytest]
addopts =
    -rsvx --strict -m 'not extra'
    --doctest-modules

[tool:pytest]
addopts = 
    --cov-config=setup.cfg
    --cov=geneoscopy.pytemplate
collect_ignore = setup.py
doctest_optionflags =
    ALLOW_BYTES
    ALLOW_UNICODE
    ELLIPSIS 
    IGNORE_EXCEPTION_DETAIL
    NORMALIZE_WHITESPACE
testpaths = src tests
markers =
  network


[coverage:run]
# enable branch coverage after we get default coverage up
# branch = True
# omit=...


[coverage:report]
show_missing = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
